# prj2env

./: .justfile  README.md  environment.yml  main.py  pyproject.toml
