[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prj2env"
version = "0.1.2"
description = "Transfers dependencies from pyproject.toml to environment.yml"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
]

[tool.hatch.build.targets.wheel]
packages = ["."]


[project.scripts]
prj2env = "main:main"
